k8s/ingress/finstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finstack-ingress
  namespace: finstack
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: finstack-gateway-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finstack-frontend-service
                port:
                  number: 80
